--- a/movimientos/templates/ordenesCerradas.html
+++ b/movimientos/templates/ordenesCerradas.html
@@ -15,101 +15,163 @@
 
 <style>
     table {
-      border-collapse: collapse;
-      width: 100%;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Agregar una sombra a la tabla */
-      
+        border-collapse: collapse;
+        width: 100%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        /* Agregar una sombra a la tabla */
+
     }
-  
+
     tr {
-      padding: 8px;
-      text-align: center;
-      border: 3px solid #7ed957; /* Agregar bordes a las celdas */
+        padding: 8px;
+        text-align: center;
+        border: 3px solid #7ed957;
+        /* Agregar bordes a las celdas */
     }
+
     .centrar {
-    text-align: center;
-  }
-  th {
-        color: #0047ab;
-      padding: 8px;
-      text-align: center;
-      border: 3px solid #7ed957; /* Agregar bordes a las celdas */
-      background-color: white;
+        text-align: center;
     }
-   h1 {
-    color: #0047ab;
-    font-size: 36px; /* Tamaño de fuente */
-    text-align: center; /* Alineación del texto */
-    text-transform: uppercase; /* Transformación a mayúsculas */
-    letter-spacing: 2px; /* Espaciado entre letras */
-    font-weight: bold; /* Negrita */
-    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);/* Sombra de texto */
-   }
-  </style>
+
+    th {
+        color: #0047ab;
+        padding: 8px;
+        text-align: center;
+        border: 3px solid #7ed957;
+        /* Agregar bordes a las celdas */
+        background-color: white;
+    }
+
+    h1 {
+        color: #0047ab;
+        font-size: 36px;
+        /* Tamaño de fuente */
+        text-align: center;
+        /* Alineación del texto */
+        text-transform: uppercase;
+        /* Transformación a mayúsculas */
+        letter-spacing: 2px;
+        /* Espaciado entre letras */
+        font-weight: bold;
+        /* Negrita */
+        text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+        /* Sombra de texto */
+    }
+
+    .container {
+        position: relative;
+        width: 100%;
+        max-width: 1400px;
+        height: auto;
+        border-radius: 20px;
+        padding: 20px;
+        box-sizing: border-box;
+        background: white;
+    }
+
+    /* Pantallas medianas (tablets, pantallas de 1200px o menos) */
+    @media (max-width: 1200px) {
+        .container {
+            max-width: 1000px;
+            /* Ancho más adecuado para pantallas medianas */
+            padding: 15px;
+            /* Ajuste de padding */
+        }
+    }
+
+    /* Pantallas pequeñas (tablets verticales, smartphones grandes) */
+    @media (max-width: 768px) {
+        .container {
+            max-width: 100%;
+            /* Ancho completo para pantallas pequeñas */
+            padding: 10px;
+            /* Relleno más pequeño */
+        }
+    }
+
+    /* Pantallas muy pequeñas (smartphones pequeños) */
+    @media (max-width: 480px) {
+        .container {
+            padding: 5px;
+            /* Relleno aún menor */
+            border-radius: 10px;
+            /* Bordes menos redondeados para espacio adicional */
+        }
+    }
+</style>
 
 
 <body>
 
     <div class="row">
 
-        <div class="table-responsive py-2">
-            
-            <div class="centrar">
-                <img src="{% static 'logo.png' %}" width="50" height="50">
-                <h1>Listado de pedidos entregados</h1>
+        <div class="container mt-4">
+
+            <div class="table-responsive py-2">
+
+                <div class="centrar">
+                    <img src="{% static 'logo.png' %}" width="50" height="50">
+                    <h1>Listado de pedidos entregados</h1>
+                </div>
+
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>
+                                ID
+                            </th>
+                            <th>
+                                Cliente
+                            </th>
+                            <th>
+                                Teléfono
+                            </th>
+                            <th>
+                                Creada el:
+                            </th>
+                            <th>
+                                Entregar el:
+                            </th>
+                            <th>
+                                Retirar el:
+                            </th>
+                            <th colspan="2"></th>
+
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        {% for c in listaOrdenes %}
+                        <tr>
+                            <td>{{c.id}}</td>
+                            <td>{{c.cliente}}</td>
+                            <td>{{c.telefono}}</td>
+                            <td>{{c.fecha_creacion}}</td>
+                            <td>{{c.fecha_entrega}}</td>
+                            <td>
+                                <font color="red">{{c.fecha_retiro}}
+                            </td>
+                            </font>
+                            <td><a href='/entradas/{{c.id_salida}}' class="btn btn-success">Recibir</a></td>
+                            <td><a href='/generaPDFGuia/{{c.id}}' target="_blank" class="btn btn-success">Guia</a></td>
+                            <td><a href='/generaPDFprint/{{c.id}}' target="_blank" class="btn btn-primary">Etiqueta</a>
+                            </td>
+                            <td><a href='/entradatotal/{{c.id_salida}}/{{c.id}}' title=""
+                                    class="btn btn-danger">Devolución Total</a></td>
+                            <td><a href='/cargarrxevento/{{c.id_salida}}' class="btn btn-success"
+                                    onclick="return confirm('¿Estás seguro?');">Ent-Rec Radios</a></td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
-
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>
-                            ID
-                        </th>
-                        <th>
-                            Cliente
-                        </th>
-                        <th>
-                            Teléfono
-                        </th>
-                        <th>
-                            Creada el:
-                        </th>
-                        <th>
-                            Entregar el:
-                        </th>
-                        <th>
-                            Retirar el:
-                        </th>
-                        <th colspan="2"></th>
-
-                    </tr>
-                </thead>
-
-                <tbody>
-                    {% for c in listaOrdenes %}
-                    <tr>
-                        <td>{{c.id}}</td>
-                        <td>{{c.cliente}}</td>
-                        <td>{{c.telefono}}</td>
-                        <td>{{c.fecha_creacion}}</td>
-                        <td>{{c.fecha_entrega}}</td>
-                        <td><font color = "red">{{c.fecha_retiro}}</td></font>
-                        <td><a href='/entradas/{{c.id_salida}}' class="btn btn-success">Recibir</a></td>
-                        <td><a href='/generaPDFGuia/{{c.id}}' target="_blank" class="btn btn-success">Guia</a></td>
-                        <td><a href='/generaPDFprint/{{c.id}}' target="_blank" class="btn btn-primary">Etiqueta</a></td>
-                        <td><a href='/entradatotal/{{c.id_salida}}/{{c.id}}' title="" 
-                            class="btn btn-danger">Devolución Total</a></td>
-                        <td><a href='/cargarrxevento/{{c.id_salida}}' class="btn btn-success" onclick="return confirm('¿Estás seguro?');">Ent-Rec Radios</a></td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    
+
 </body>
 {% endblock %}
+
 </html>
