--- a/movimientos/templates/ordenesDevueltas.html
+++ b/movimientos/templates/ordenesDevueltas.html
@@ -14,92 +14,149 @@
 </head>
 <style>
     table {
-      border-collapse: collapse;
-      width: 100%;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Agregar una sombra a la tabla */
-      
+        border-collapse: collapse;
+        width: 100%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        /* Agregar una sombra a la tabla */
+
     }
-  
+
     tr {
-      padding: 8px;
-      text-align: center;
-      border: 3px solid #7ed957; /* Agregar bordes a las celdas */
+        padding: 8px;
+        text-align: center;
+        border: 3px solid #7ed957;
+        /* Agregar bordes a las celdas */
     }
+
     .centrar {
-    text-align: center;
-  }
-  th {
-        color: #0047ab;
-      padding: 8px;
-      text-align: center;
-      border: 3px solid #7ed957; /* Agregar bordes a las celdas */
-      background-color: white;
+        text-align: center;
     }
-   h1 {
-    color: #0047ab;
-    font-size: 36px; /* Tamaño de fuente */
-    text-align: center; /* Alineación del texto */
-    text-transform: uppercase; /* Transformación a mayúsculas */
-    letter-spacing: 2px; /* Espaciado entre letras */
-    font-weight: bold; /* Negrita */
-    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);/* Sombra de texto */
-   }
-  </style>
+
+    th {
+        color: #0047ab;
+        padding: 8px;
+        text-align: center;
+        border: 3px solid #7ed957;
+        /* Agregar bordes a las celdas */
+        background-color: white;
+    }
+
+    h1 {
+        color: #0047ab;
+        font-size: 36px;
+        /* Tamaño de fuente */
+        text-align: center;
+        /* Alineación del texto */
+        text-transform: uppercase;
+        /* Transformación a mayúsculas */
+        letter-spacing: 2px;
+        /* Espaciado entre letras */
+        font-weight: bold;
+        /* Negrita */
+        text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+        /* Sombra de texto */
+    }
+
+    .container {
+        position: relative;
+        width: 100%;
+        max-width: 1400px;
+        height: auto;
+        border-radius: 20px;
+        padding: 20px;
+        box-sizing: border-box;
+        background: white;
+    }
+
+    /* Pantallas medianas (tablets, pantallas de 1200px o menos) */
+    @media (max-width: 1200px) {
+        .container {
+            max-width: 1000px;
+            /* Ancho más adecuado para pantallas medianas */
+            padding: 15px;
+            /* Ajuste de padding */
+        }
+    }
+
+    /* Pantallas pequeñas (tablets verticales, smartphones grandes) */
+    @media (max-width: 768px) {
+        .container {
+            max-width: 100%;
+            /* Ancho completo para pantallas pequeñas */
+            padding: 10px;
+            /* Relleno más pequeño */
+        }
+    }
+
+    /* Pantallas muy pequeñas (smartphones pequeños) */
+    @media (max-width: 480px) {
+        .container {
+            padding: 5px;
+            /* Relleno aún menor */
+            border-radius: 10px;
+            /* Bordes menos redondeados para espacio adicional */
+        }
+    }
+</style>
 
 <body>
 
     <div class="row">
-        <div class="table-responsive py-2">
-            <div class="centrar">
-                <img src="{% static 'logo.png' %}" width="50" height="50">
-                <h1>Listado de Pedidos Devueltos</h1>
-            </div>
-
-        <div class="row">
+        <div class="container mt-4">
             <div class="table-responsive py-2">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>
-                            ID
-                        </th>
-                        <th>
-                            Cliente
-                        </th>
-                        <th>
-                            Fecha del Evento:
-                        </th>
-                        
-                        <th>
-                            <form action='/buscaOrdenesDevueltas/' method="POST">
-                                {% csrf_token %}
-                            <select name="clienteNombre" style="width: 300px;">
-                                {% for d in lista_cliente %}
-                                <option value="{{d.nombre}}"> {{d.nombre}}</option>
-                                {% endfor%}
-                            </select>
-                            <button type="submit" class="btn btn-warning">Buscar</button>
-                            </form>
-                        </th>
-                    </tr>
-                </thead>
+                <div class="centrar">
+                    <img src="{% static 'logo.png' %}" width="50" height="50">
+                    <h1>Listado de Pedidos Devueltos</h1>
+                </div>
 
-                <tbody>
-                    {% for c in listaOrdenes %}   
-                    <tr>
-                        <td>{{c.id_orden}}</td>
-                        <td>{{c.cliente}}</td>
-                        <td>{{c.fecha_evento}}</td>
-                        <td><a href='/guiadevueltos/{{c.id_orden}}' class="btn btn-success">Ver Detalle</a></td> 
-                    </tr>
-                    {% endfor %}        
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+                <div class="row">
+                    <div class="table-responsive py-2">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        ID
+                                    </th>
+                                    <th>
+                                        Cliente
+                                    </th>
+                                    <th>
+                                        Fecha del Evento:
+                                    </th>
+
+                                    <th>
+                                        <form action='/buscaOrdenesDevueltas/' method="POST">
+                                            {% csrf_token %}
+                                            <select name="clienteNombre" style="width: 300px;">
+                                                {% for d in lista_cliente %}
+                                                <option value="{{d.nombre}}"> {{d.nombre}}</option>
+                                                {% endfor%}
+                                            </select>
+                                            <button type="submit" class="btn btn-warning">Buscar</button>
+                                        </form>
+                                    </th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                {% for c in listaOrdenes %}
+                                <tr>
+                                    <td>{{c.id_orden}}</td>
+                                    <td>{{c.cliente}}</td>
+                                    <td>{{c.fecha_evento}}</td>
+                                    <td><a href='/guiadevueltos/{{c.id_orden}}' class="btn btn-success">Ver Detalle</a>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+                crossorigin="anonymous"></script>
 </body>
 {% endblock %}
+
 </html>
