--- a/movimientos/templates/inventario.html
+++ b/movimientos/templates/inventario.html
@@ -13,180 +13,125 @@
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap');
 
-    input {
-        caret-color: red;
-    }
-
-    .inputs {
-        text-align: left;
-        margin-top: 30px;
-    }
-
-    label,
-    input,
-    button,
-    textarea {
-        float: left;
-        margin: 10px;
-    }
-
-    label {
-        margin-bottom: 4px;
-    }
-
-    label:nth-of-type(2) {
-        margin-top: 12px;
-    }
-
-    input::placeholder {
-        color: gray;
-    }
-
-    input {
-        background: #ecf0f3;
-        padding: 10px;
-        padding-left: 20px;
-        height: 50px;
-        font-size: 14px;
-        border-radius: 10px;
-        box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
-    }
-
-
-    button {
-        color: white;
-        margin-top: 20px;
-        background: #1d2931;
-        height: 40px;
+    .container {
+        position: relative;
+        width: 100%;
+        max-width: 80%;
+        height: auto;
         border-radius: 20px;
-        cursor: pointer;
-        font-weight: 900;
-        box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px white;
-        transition: 0.5s;
+        padding: 20px;
+        box-sizing: border-box;
+        background: white;
+    }
+
+    .centrar {
+        text-align: center;
+    }
+
+    h3 {
+        color: #0047ab;
+        font-size: 20px;
+        /* Tamaño de fuente */
+        text-align: center;
+        /* Alineación del texto */
+        text-transform: uppercase;
+        /* Transformación a mayúsculas */
+        letter-spacing: 2px;
+        /* Espaciado entre letras */
+        font-weight: bold;
+        /* Negrita */
+        text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+        /* Sombra de texto */
+    }
+
+    h1 {
+        color: #0047ab;
+        font-size: 36px;
+        /* Tamaño de fuente */
+        text-align: center;
+        /* Alineación del texto */
+        text-transform: uppercase;
+        /* Transformación a mayúsculas */
+        letter-spacing: 2px;
+        /* Espaciado entre letras */
+        font-weight: bold;
+        /* Negrita */
+        text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+        /* Sombra de texto */
     }
 </style>
 
 <body>
-    {% load crispy_forms_tags %}
-    <div class="row" style="margin-left: 10px;">
-        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-            <h3>
-                INVENTARIO ACTUAL
-            </h3>
-            <br>
-            <h5>
-                <b>
-                    <font color="#9B870C">AMARILLAS DISPONIBLES = {{amarillasDisponibles}}</font>
-                </b>
-            </h5>
-            <br>
-            <h5>
-                <b>
-                    <font color="#572364">MORADAS DISPONIBLES = {{moradasDisponibles}}</font>
-                </b>
-            </h5>
-            <br>
-            <h5>
-                <b>
-                    <font color="#4B4B4B">PLOMO DISPONIBLES = {{plomoDisponibles}}</font>
-                </b>
-            </h5>
-            <br>
-            <h5>
-                <b>
-                    <font color="green">DISPONIBLES - TOTAL = {{cantidadDisponible}}</font>
-                </b>
-            </h5>
 
-            <br>
+    <div class="container mb-4 mt-4">
+        {% load crispy_forms_tags %}
+        <div style="text-align: center;" class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="centrar">
+                <h1><b>Inventario Radios</b></h1> <br>
+                <div class="row">
+                    <div class="form-group col-md-3 col-lg-3 col-xl-3">
+                        <h3>Disponibles</h3>
+                        AMARILLAS = {{amarillasDisponibles}}<br>
+                        MORADAS = {{moradasDisponibles}}<br>
+                        PLOMO = {{plomoDisponibles}}<br>
+                        TOTAL = {{cantidadDisponible}}
+                    </div>
+                    <div class="form-group col-md-3 col-lg-3 col-xl-3">
+                        <h3>No Disponibles</h3>
+                        AMARILLAS = {{amarillasnoDisponibles}}<br>
+                        MORADAS = {{moradasnoDisponibles}}<br>
+                        PLOMO = {{plomonoDisponibles}}<br>
+                        TOTAL = {{cantidadnoDispo}}
+                    </div>
+                    <div class="form-group col-md-3 col-lg-3 col-xl-3">
+                        <h3>Malogradas</h3>
+                        TOTAL = {{cantidadMalogrado}}
+                    </div>
+                    <div class="form-group col-md-3 col-lg-3 col-xl-3">
+                        <h3>Extraviadas</h3>
+                        TOTAL = {{extraviadas}}
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 40px;">
+                    <div class="form-group col-md-4 col-lg-4 col-xl-4">
 
-            <h5>
-                <b>
-                    <font color="#9B870C">AMARILLAS NO DISPONIBLES = {{amarillasnoDisponibles}}</font>
-                </b>
-            </h5>
+                        <h3>Buscar Serial</h3>
+                        <form action="/ubicarRadios/" method="POST">
 
-            <br>
+                            {% csrf_token %}
+                            {{buscaradios}}
 
-            <h5>
-                <b>
-                    <font color="#572364">MORADAS NO DISPONIBLES = {{moradasnoDisponibles}}</font>
-                </b>
-            </h5>
+                            <button class="btn-success">
+                                Buscar
+                            </button><br>
+                            {{error01}}
+                        </form>
 
-            <br>
-            <h5>
-                <b>
-                    <font color="#4B4B4B">PLOMO NO DISPONIBLES = {{plomonoDisponibles}}</font>
-                </b>
-            </h5>
-            <br>
-
-            <h5>
-                <b>
-                    <font color="red">NO DISPONIBLES - TOTAL = {{cantidadnoDispo}}</font>
-                </b>
-            </h5>
-
-            <br>
-
-            <h5>
-                <b>
-                    <font color="blue">MALOGRADOS - TOTAL = {{cantidadMalogrado}}</font>
-                </b>
-            </h5>
-
-            <br><br><br>
-            <h3> Buscar Ítem</h3>
-            
-            <form action="/ubicarRadios/" method="POST">
-               
-                {% csrf_token %}
-                {{buscaradios}}
-
-                <button>
-                    Buscar
-                </button>
-            </form>
-            <br><br><br><br><br>
-            <h4>
-                <b><font color="red">El estado del radio es: {{estado}}</font></b>
-                <b><font color="orange">{{error01}}</font></b>
-                <br>
-                <b><font color="red">La última salida fue el: </font></b>
-                <b><font color="orange">{{ultima_salida}}</font></b><br>
-                <b><font color="red">Nombre del cliente: </font></b>
-                <b><font color="orange">{{cliente}}</font></b>
-            </h4>
-
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-            <h3>Agregar Ítem al Inventario</h3>
-            <div style="height:10vh;width:30vw;">
-                {{error}}
-                <form action="/inventario/" method="POST">
-                    {% csrf_token %}
-                    {{form|crispy}}
-
-                    <button>
-                        Guardar
-                    </button>
+                    </div>
+                    <div class="form-group col-md-4 col-lg-4 col-xl-4">
+                        <p>El estado del radio es: {{estado}}</p>
+                        <p>La última salida fue el: {{ultima_salida}}</p>
+                        <p>Nombre del cliente: {{cliente}}</p>
+                    </div>
+                    <div class="form-group col-md-4 col-lg-4 col-xl-4">
+                        <a href='/#formregistrarpago/{{c.id_orden}}/{{c.cliente}}/{{c.ruc_razon_social}}/{{c.id_salida}}/{{c.razon_social}}'
+                                            class="btn btn-warning"
+                                            style="background: url(/static/excel.png); background-size: cover; width: 100px; height: 100px;"
+                                            title="Exportar a Excel"></a>
+                    </div>
+                </div>
             </div>
-            </form>
-
-
-
-
-
-
-
-
         </div>
+
+
+    </div>
+
+    </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
 </body>
 {% endblock %}
